# News_Client

./: README.md
News_Client/: CMakeLists.txt  FullArticleView.qml  Main.qml  databasemanager.cpp  databasemanager.h  main.cpp  networkmanager.cpp  networkmanager.h  newsmodel.cpp  newsmodel.h  settingsmanager.cpp  settingsmanager.h
